<resources>
    <string name="app_name">Game Configurations</string>
    <string name="title_add_game_configs">Add Game Configs</string>
    <string name="title_edit_game_configs">Edit Game Configs</string>
    <string name="appbar_add_game_config">appbar_add_game_config</string>
    <string name="appbar_save_game_config">appbar_save_game_config</string>
    <string name="string_poor_score">Poor Score:</string>
    <string name="string_great_score">Great Score:</string>
    <string name="empty_list_view">You have no games! Click add (+) to add a new game!</string>
    <string name="dialog_welcome">Welcome!</string>
    <string name="welcome_message">You have no games! \n\n 1. To add a game, simply click the plus (+) button and fill out your game details.\n 2. You can later edit a game by clicking on the game and changing the game\'s details.\n 3. We hope you enjoy playing and keeping track of your games!\n</string>
    <string name="test">Welcome! Good to meet you and get to know you here. I am very happy you are playing our game today!</string>
    <string name="empty_game_config_name">All fields cannot be empty, please enter the Game Name</string>
    <string name="empty_game_config_poor_score">All fields cannot be empty, please enter the Poor Score</string>
    <string name="empty_game_config_great_score">All fields cannot be empty, please enter the Great Score</string>
    <string name="name">Name</string>
    <string name="great_score">Great Score</string>
    <string name="poor_score">Poor Score</string>
    <string name="toast_game_config_saved">Game Config Saved!</string>
    <string name="toast_game_config_not_saved">Game Config Not Saved!</string>
    <string name="edit_game_configuration">Edit Game Configuration</string>
    <string name="record_a_new_game_play">Record a New Game Play</string>
    <string name="past_games">Past Games</string>
    <string name="record_a_new_game_play_label">Record a New Game Play</string>
    <string name="delete_game_configuration">Delete Game Configuration</string>
    <string name="view_achievements">View Achievement Levels</string>
    <string name="achievement_statistics">Achievement Statistics</string>
    <string name="delete_msg">Game Config: \"%s\" has been deleted!</string>
    <string name="number_players_view">Number of Players:</string>
    <string name="combined_score_view">Combined Score:</string>
    <string name="achievement_level_view">Level:</string>
    <string name="difficulty_level_view">Difficulty:</string>
    <string name="toast_save_game_record">Game Record Saved!</string>
    <string name="toast_check_empty_num_players">All fields cannot be empty, please enter the number of players</string>
    <string name="toast_check_empty_combine_score">All fields cannot be empty, please enter the combined score</string>
    <string name="record_new_game_title">Record New Game Play</string>
    <string name="edit_game_play_title">Edit Game Play in</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="combined_score">Combined Score:</string>
    <string name="check_invalid_number_of_player">Number of players must be greater than 0</string>
    <string name="null_difficulty_selected_error">Please select a difficulty</string>
    <string name="player_score_info">Player Score is:</string>
    <string name="player_id_info">Player #</string>
    <string name="set_button_label">Set</string>
    <string name="default_combined_score">-</string>
    <string name="toast_set_number_of_players">Please set number of players and enter scores first</string>
    <string name="write_access_denied_msg">Please allow file permissions for photo saving/loading functionality.</string>
    <string name="achievement_level_title">Achievement Levels</string>
    <string name="special_achievement">Toddler\'s Baby Step</string>
    <string name="enchanted_forest_special_achievement">Little Seedling</string>
    <string name="dark_tribe_special_achievement">Small Shadow Monster</string>
    <string name="display_required_score">Required Score: </string>
    <string name="display_earned_by_score">Earned by Score: </string>
    <string name="display_special_achievement">"Special Achievement: \n%s"</string>
    <string name="view_achievements2">View Achievements</string>
    <string name="zero_player_msg">Please Enter Players more than 0!</string>
    <string name="num_player_text">Enter Number of Players:</string>
    <string name="less_than_achievement_score"><![CDATA[<]]></string>
    <string name="required_achievement_score" />
    <string name="no_past_games_played">You have no past games played! \n\n1. To record a new game press the Record a New Game Play button and enter the number of players and the combined score.\n2. You can come back here to see the history of your past games and view their achievement.</string>
    <string name="enter_number_of_players">Enter Number of Players:</string>
    <string name="select_difficulty">Select Difficulty:</string>
    <string name="select_button_normal">Normal</string>
    <string name="select_button_easy">Easy</string>
    <string name="select_button_hard">Hard</string>
    <string name="toast_enter_number_of_players">All fields can not be empty! Please enter the number of players</string>
    <string name="enter_player_info">Enter Score of Player #</string>
    <string name="confirm_save_info">Confirm Score</string>
    <string name="single_player_title">Enter Individual Score</string>
    <string name="score_input_error_msg">Please enter a valid score!</string>
    <string name="enter_score_of_player">Enter Score of Player</string>
    <string name="confirm_score">Confirm Score</string>
    <string name="achievement_level_congratulations_message">Congratulations! Your team has earned achievement level: %1$s! Woohoo!</string>
    <string name="next_achievement_level_message">Keep going for the next level: %1$s! Earn %2$s more points to unlock it!</string>
    <string name="earned_highest_achievement_message">Yay! You have reached the highest level</string>
    <string name="earned_achievement">Earned Achievement</string>
    <string name="toast_set_single_player_score">Must set individual player score. Please press set button</string>
    <string name="skip">Skip</string>
    <string name="achievement_settings_title">achievement settings title</string>
    <string name="achievement_settings_activity_title">Achievement Settings</string>
    <string name="adventurer">Adventurer</string>
    <string name="enchanted_forest">Enchanted Forest</string>
    <string name="select_theme">Select Theme:</string>
    <string name="save_achievement_settings">save achievement settings</string>
    <string name="replay">Replay</string>
    <string name="finish">Finish</string>
    <string name="game_config_photo_user_input_check">Please enter all fields before taking a photo</string>
    <string name="theme_changed">Theme Changed</string>
    <string name="about_screen_title">Help</string>
    <string name="team_name_title">Team Name:</string>
    <string name="chromium_team_name">Chromium</string>
    <string name="developers_title">Developers:</string>
    <string name="developer_chel">Chel</string>
    <string name="developer_jay">Jay</string>
    <string name="developer_kayla">Kayla</string>
    <string name="developer_nathan">Nathan</string>
    <string name="about_the_application_title">About the Application:</string>
    <string name="about_the_application_content">
        \t\tThis application is bringing Co-operative Goals for Competitive Games.
        The idea is to provide achievement goals to turn some competitive board games into a more co-operative experience.
        \n\t\tStart by creating a game configuration for your game board! Set the score range and take a memorable picture if you want!
        Now it is time to record a game play! We have three difficulty levels for you to choose, record the game score for you and your friends and remember to take a selfie! Let\'s get the game rolling and win an achievement title for your team!
        \n\t\tNot sure how many scores are needed to earn an achievement? Check out the View Achievement Levels!
        Want to see how many achievement title you have earned? Check out the Achievement Statistics!
        Realize an error in your game configurations? Go to edit game configuration and modify it!
        Want a different theme for achievements? Go to settings in View Achievement Levels!
        Have fun playing with it!
    </string>
    <string name="resources_links_title">Resources links:</string>
    <string name="links">
        Images:\n
        <a href="https://unsplash.com/photos/xplrF8WMitE">
            https://unsplash.com/photos/xplrF8WMitE
        </a>\n\n
        <a href="https://sg.aphrodite.global/">
            https://sg.aphrodite.global/
        </a>\n\n
        <a href="https://www.vectorstock.com/royalty-free-vector/no-image-symbol-missing-available-icon-gallery-vector-43193649">
            https://www.vectorstock.com/royalty-free-vector/no-image-symbol-missing-available-icon-gallery-vector-43193649
        </a>
        \n\nAnimation:\n
        <a href="https://aphrodite.global/">
            https://aphrodite.global/
        </a>\n\n
        <a href="https://stackoverflow.com/questions/12983681/translateanimation-on-imageview-android">
            https://stackoverflow.com/questions/12983681/translateanimation-on-imageview-android
        </a>\n\n
        <a href="https://stackoverflow.com/questions/20608073/how-to-rotate-imageview-from-its-centre-position">
            https://stackoverflow.com/questions/20608073/how-to-rotate-imageview-from-its-centre-position
        </a>
        \n\nSound:\n
        <a href="https://www.youtube.com/watch?v=h3QMnHw0fi8">
            https://www.youtube.com/watch?v=h3QMnHw0fi8
        </a>
        \n\nResources:\n
        <a href="https://medium.com/@vishrut.goyani9/scoped-storage-in-android-writing-deleting-media-files-ee6235d3011">
            https://medium.com/@vishrut.goyani9/scoped-storage-in-android-writing-deleting-media-files-ee6235d3011
        </a>\n\n
        <a href="https://stackoverflow.com/questions/56904485/how-to-save-an-image-in-android-q-using-mediastore">
            https://stackoverflow.com/questions/56904485/how-to-save-an-image-in-android-q-using-mediastore
        </a>\n\n
        <a href="https://stackoverflow.com/questions/15662258/how-to-save-a-bitmap-on-internal-storage">
            https://stackoverflow.com/questions/15662258/how-to-save-a-bitmap-on-internal-storage
        </a>\n\n
        <a href="https://stackoverflow.com/questions/65210522/how-to-get-bitmap-from-imageuri-in-api-level-30">
            https://stackoverflow.com/questions/65210522/how-to-get-bitmap-from-imageuri-in-api-level-30
        </a>\n\n
        <a href="https://stackoverflow.com/questions/17674634/saving-and-reading-bitmaps-images-from-internal-memory-in-android">
            https://stackoverflow.com/questions/17674634/saving-and-reading-bitmaps-images-from-internal-memory-in-android
        </a>\n\n
        <a href="https://stackoverflow.com/questions/17674634/saving-and-reading-bitmaps-images-from-internal-memory-in-android">
            https://stackoverflow.com/questions/17674634/saving-and-reading-bitmaps-images-from-internal-memory-in-android
        </a>\n\n
        <a href="https://github.com/hdodenhof/CircleImageView">
            https://github.com/hdodenhof/CircleImageView
        </a>\n\n
        <a href="https://github.com/PhilJay/MPAndroidChart">
            https://github.com/PhilJay/MPAndroidChart
        </a>
    </string>
</resources>