<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AchievementSettingsActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="336dp"
        android:layout_height="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345">

        <RadioButton
            android:id="@+id/theme1RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adventurer" />

        <RadioButton
            android:id="@+id/theme2RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enchanted_forest" />

        <RadioButton
            android:id="@+id/theme3RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/themeSelectionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />
</androidx.constraintlayout.widget.ConstraintLayout>